# fintself

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  pyproject.toml  santander.xlsx
.github/workflows/: release.yml
docs/: CAPTCHA_CENCOSUD.md  CL_BANCO_CHILE.md  CL_CENCOSUD.md  CL_SANTANDER.md
fintself/: __init__.py  cli.py  settings.py
fintself/core/: exceptions.py  models.py
fintself/scrapers/: __init__.py  base.py
fintself/scrapers/cl/: __init__.py  banco_chile.py  cencosud.py  estado.py  santander.py
fintself/utils/: attempts.py  html_reducer.py  logging.py  notifications.py  output.py
scripts/: run_santander_scrape.sh
tutorials/: debug_scrapers.py  run_all_scrapers_visible.py
